# marimo-jupyter-extension

./: .gitignore  AGENTS.md  README.md  example.py  install.json  mkdocs.yml  pyproject.toml
.github/workflows/: autofix.yml  docs.yml  lint.yml  publish.yml  test.yml
docs/: configuration.md  index.md  installation.md  jupyterhub.md  troubleshooting.md
example/opt/jupyterhub/: jupyterhub_config.py  pyproject.toml
jupyter_marimo_proxy/: __init__.py  config.py  executable.py  handlers.py
jupyter_marimo_proxy/etc/jupyter_server_config.d/: jupyter_marimo_proxy.json
labextension/: package-lock.json  package.json  pnpm-lock.yaml
labextension/schema/: plugin.json
labextension/src/: icons.ts  iframe-widget.ts  index.ts  sidebar.ts  widget-factory.ts
labextension/style/: base.css
marimo_jupyter_extension/: __init__.py  config.py  executable.py  handlers.py  version_info.py
scripts/: bump-marimo.sh  release.sh  test-environments.sh
tests/: conftest.py  test_config.py  test_convert.py  test_entry_point.py  test_executable.py  test_exporter.py  test_handlers.py  test_integration.py  test_parity.py  test_setup.py
